--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
 
     <section id="about" class="text-center">
-        <h2><strong>About Coffee Haven</strong></h2>
+        <h2><strong>About Us</strong></h2>
         <img src="pic/logo.jpg" alt="Coffee Haven Logo" class="img-fluid" />
         <p>Welcome to Coffee Haven, your cozy corner for the finest coffee blends and a warm atmosphere to unwind.</p>
     </section>
