--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
         <h2><strong>About Us</strong></h2>
         <img src="pic/logo.jpg" alt="Coffee Haven Logo" class="img-fluid" />
         <p style="text-align: center;">Welcome to Coffee Haven, your cozy corner for the finest coffee blends and a warm atmosphere to unwind.</p>
-        <p style="text-align: center;">At Coffee Haven, we're more than just a coffee system provider; we're a community of coffee enthusiasts dedicated to making every cup count.<br>Founded with a passion for quality and a vision to simplify coffee shop operations, we designed the Coffee Haven System to help cafes thrive in an ever-evolving industry.</p>
-        <p style="text-align: center;">Our team is made up of seasoned baristas, coffee shop owners, and tech innovators who understand the nuances of running a coffee business.<br>We know the challenges you face—keeping up with demand, managing inventory, building customer loyalty—and we created Coffee Haven System to tackle these with ease and efficiency.</p>
-        <p style="text-align: center;">Whether you're a startup cafe or a well-loved neighborhood spot, we're here to support your journey.<br> Our mission is to empower you to focus on crafting memorable coffee experiences, while we handle the tools to make your operations seamless and successful.<br> Join us, and let’s brew a better coffee culture together!</p>
+        <p style="text-align: center;">At Coffee Haven, we're more than just a coffee system provider; we're a community of coffee enthusiasts dedicated to making every cup count.<br>Founded with a passion for quality and a vision to simplify coffee shop operations, we designed the Coffee Haven System to help cafes thrive in an ever-evolving industry.<br>
+        Our team is made up of seasoned baristas, coffee shop owners, and tech innovators who understand the nuances of running a coffee business.<br>We know the challenges you face—keeping up with demand, managing inventory, building customer loyalty—and we created Coffee Haven System to tackle these with ease and efficiency.<br>
+        Whether you're a startup cafe or a well-loved neighborhood spot, we're here to support your journey.<br> Our mission is to empower you to focus on crafting memorable coffee experiences, while we handle the tools to make your operations seamless and successful.<br> Join us, and let’s brew a better coffee culture together!</p>
     </section>
     
     
