--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
      <section id="about" class="text-center">
     <h2><strong>About Us</strong></h2>
-    <img src="pic/logo.jpg" alt="Coffee Haven Logo" class="img-fluid" />
+    <img src="pic/logo.jpg" alt="Coffee Haven Logo" class="rounded-circle" alt="ebook">
     <p style="text-align: center;"> Welcome to Coffee Haven, your cozy spot for great coffee and good company.<br> We’re dedicated to serving delicious, responsibly sourced coffee and freshly baked treats in a relaxed, welcoming atmosphere.<br> Whether you're here to work, unwind, or catch up with friends, we’re excited to be a part of your day.
 
         Come by and make yourself at home! ☕
